[package]
name = "kvs_zoo"
publish = false
version = "0.0.0"
edition = "2024"

[lib]
name = "kvs_zoo"

[dependencies]
hydro_lang = { git = "https://github.com/hydro-project/hydro.git", branch = "main", features = ["deploy"] }
hydro_std = { git = "https://github.com/hydro-project/hydro.git", branch = "main" }
hydro_deploy = { git = "https://github.com/hydro-project/hydro.git", branch = "main" }
lattices = { version = "0.6.1", features = ["serde"] }
stageleft = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.0"
futures = "0.3.0"
tokio = { version = "1.29.0", features = ["full"] }

[build-dependencies]
stageleft_tool = "0.10.0"

[dev-dependencies]
ctor = "0.2"
hydro_deploy = { git = "https://github.com/hydro-project/hydro.git", branch = "main" }
hydro_lang = { git = "https://github.com/hydro-project/hydro.git", branch = "main", features = [
    "deploy",
    "viz",
    "sim",
] }
tokio = { version = "1.29.0", features = ["full"] }
tokio-stream = { version = "0.1.3", default-features = false }
futures = "0.3.0"
insta = { version = "1", features = ["json"] }

[lints.clippy]
uninlined_format_args = "allow"
